--- a/firmware/esp32/Cargo.toml
+++ b/firmware/esp32/Cargo.toml
@@ -9,10 +9,10 @@ name = "esp32"
 path = "./src/bin/main.rs"
 
 [dependencies]
-esp-hal                 = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }
 defmt                   = "1.0.1"
-esp-bootloader-esp-idf  = { version = "0.4.0", features = ["defmt", "esp32"] }
 critical-section        = "1.2.0"
+esp-hal                 = { version = "~1.0", features = ["defmt", "esp32", "unstable"] }
+esp-bootloader-esp-idf  = { version = "0.4.0", features = ["defmt", "esp32"] }
 esp-alloc               = { version = "0.9.0", features = ["defmt"] }
 esp-backtrace           = { version = "0.18.1", features = [
   "defmt",
@@ -20,7 +20,12 @@ esp-backtrace           = { version = "0.18.1", features = [
   "panic-handler",
 ] }
 esp-println             = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
-
+heapless = { version = "0.9.2", features = ["defmt"] }
+max31865 = { path = "../rdc/max31865" }
+embassy-executor = "0.9.1"
+embassy-time = "0.5.0"
+embedded-hal-async = "1.0.0"
+esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "defmt"]}
 
 [profile.dev]
 # Rust debug is too slow.
