--- a/firmware/esp32s3/Cargo.toml
+++ b/firmware/esp32s3/Cargo.toml
@@ -25,6 +25,7 @@ esp-backtrace = { version = "0.18.1", features = [
 esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3"] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
 static_cell = "2.1.1"
+heapless = { version = "0.9.2", features = ["defmt"] }
 
 
 [profile.dev]
