--- a/firmware/shared/Cargo.toml
+++ b/firmware/shared/Cargo.toml
@@ -8,5 +8,10 @@ default = []
 std = []
 
 [dependencies]
+embassy-futures = "0.1.2"
+embassy-sync = "0.7.2"
+embassy-time = "0.5.0"
+embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
-
+heapless = { version = "0.9.2" }
+max31865  = { path = "../rdc/max31865" }
