--- a/firmware/shared/Cargo.toml
+++ b/firmware/shared/Cargo.toml
@@ -15,3 +15,4 @@ embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
 heapless = { version = "0.9.2" }
 max31865  = { path = "../rdc/max31865" }
+pid = "4.0.0"
