--- a/firmware/shared/Cargo.toml
+++ b/firmware/shared/Cargo.toml
@@ -8,6 +8,7 @@ default = []
 std = []
 
 [dependencies]
+defmt = "1.0.1"
 embassy-futures = "0.1.2"
 embassy-sync = "0.7.2"
 embassy-time = "0.5.0"
@@ -15,4 +16,5 @@ embedded-hal = "1.0.0"
 embedded-hal-async = "1.0.0"
 heapless = { version = "0.9.2" }
 max31865  = { path = "../rdc/max31865" }
+num-traits = {version = "0.2.19", default-features = false}
 pid = "4.0.0"
