--- a/firmware/shared/Cargo.toml
+++ b/firmware/shared/Cargo.toml
@@ -9,7 +9,8 @@ default = []
 std = [
   "dep:chrono", 
   "dep:embedded-graphics-simulator", 
-  "dep:eg-seven-segment"
+  "dep:eg-seven-segment",
+  "dep:embedded-layout"
 ]
 
 [dependencies]
@@ -30,3 +31,4 @@ heapless = { version = "0.9.2" }
 max31865  = { path = "../rdc/max31865" }
 num-traits = {version = "0.2.19", default-features = false}
 pid = "4.0.0"
+embedded-layout = { version = "0.4.2", optional = true }
