--- a/firmware/esp32/Cargo.toml
+++ b/firmware/esp32/Cargo.toml
@@ -4,9 +4,9 @@ name         = "frr_esp32"
 rust-version = "1.88"
 version      = "0.1.0"
 
-[[bin]]
-name = "esp32"
-path = "./src/bin/main.rs"
+# [[bin]]
+# name = "esp32"
+# path = "./src/bin/main.rs"
 
 [dependencies]
 defmt                   = "1.0.1"
@@ -21,11 +21,17 @@ esp-backtrace           = { version = "0.18.1", features = [
 ] }
 esp-println             = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
 heapless = { version = "0.9.2", features = ["defmt"] }
-max31865 = { path = "../rdc/max31865" }
 embassy-executor = "0.9.1"
 embassy-time = "0.5.0"
 embedded-hal-async = "1.0.0"
 esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "defmt"]}
+frr_shared = { path = "../shared" }
+# display-interface = "0.5.0"
+# display-interface-spi = "0.5.0"
+mipidsi = "0.9.0"
+embassy-embedded-hal = "0.5.0"
+embassy-sync = "0.7.2"
+static_cell = "2.1.1"
 
 [profile.dev]
 # Rust debug is too slow.
