--- a/firmware/shared/Cargo.toml
+++ b/firmware/shared/Cargo.toml
@@ -9,14 +9,11 @@ default = []
 std = [
   "dep:chrono", 
   "dep:embedded-graphics-simulator", 
-  "dep:eg-seven-segment",
-  "dep:embedded-layout"
 ]
 
 [dependencies]
 # optional 
 chrono = { version = "0.4.43", optional = true }
-eg-seven-segment = { version = "0.2.0", optional = true }
 embedded-graphics-simulator = { version = "0.8.0", optional = true }
 
 # main deps 
@@ -31,4 +28,5 @@ heapless = { version = "0.9.2" }
 max31865  = { path = "../rdc/max31865" }
 num-traits = {version = "0.2.19", default-features = false}
 pid = "4.0.0"
-embedded-layout = { version = "0.4.2", optional = true }
+embedded-layout = { version = "0.4.2"}
+eg-seven-segment = { version = "0.2.0"}
