--- a/firmware/esp32s3/Cargo.toml
+++ b/firmware/esp32s3/Cargo.toml
@@ -12,6 +12,8 @@ path = "./src/bin/main.rs"
 embassy-executor = "0.9.1"
 embassy-sync = "0.7.2"
 embassy-time = "0.5.0"
+embedded-hal-async = "1.0.0"
+embassy-embedded-hal = "0.5.0"
 esp-hal = { version = "~1.0", features = ["defmt", "esp32s3", "unstable"] }
 defmt                  = "1.0.1"
 esp-bootloader-esp-idf = { version = "0.4.0", features = ["defmt", "esp32s3"] }
@@ -26,7 +28,9 @@ esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3"] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
 static_cell = "2.1.1"
 heapless = { version = "0.9.2", features = ["defmt"] }
+mipidsi = "0.9.0"
 
+frr_shared = { path = "../shared" }
 
 [profile.dev]
 # Rust debug is too slow.
