--- a/firmware/esp32/Cargo.toml
+++ b/firmware/esp32/Cargo.toml
@@ -8,6 +8,19 @@ version      = "0.1.0"
 # name = "esp32"
 # path = "./src/bin/main.rs"
 
+[features]
+default = []
+
+ble = [
+  "dep:bt-hci", 
+  "dep:trouble-host",
+  "dep:esp-radio"
+]
+
+bt-hci = ["dep:bt-hci"]
+trouble-host = ["dep:trouble-host"]
+esp-radio = ["dep:esp-radio"]
+
 [dependencies]
 defmt                   = "1.0.1"
 critical-section        = "1.2.0"
@@ -24,12 +37,17 @@ heapless = { version = "0.9.2", features = ["defmt"] }
 embassy-executor = "0.9.1"
 embassy-time = "0.5.0"
 embedded-hal-async = "1.0.0"
-esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "defmt"]}
+esp-rtos = { version = "0.2.0", features = ["esp32", "embassy", "defmt", "esp-radio"]}
 frr_shared = { path = "../shared" }
 mipidsi = "0.9.0"
 embassy-embedded-hal = "0.5.0"
 embassy-sync = "0.7.2"
 static_cell = "2.1.1"
+
+bt-hci = { version = "0.7.0", optional = true }
+trouble-host = { version = "0.5.1", optional = true, features = ["derive", "defmt"]}
+esp-radio = { version = "0.17.0", optional = true, features = ["ble", "defmt", "unstable", "esp32"] }
+embassy-futures = "0.1.2"
 
 [profile.dev]
 # Rust debug is too slow.
@@ -44,3 +62,4 @@ incremental      = false
 lto              = 'fat'
 opt-level        = 's'
 overflow-checks  = false
+
