--- a/firmware/esp32s3/Cargo.toml
+++ b/firmware/esp32s3/Cargo.toml
@@ -8,6 +8,15 @@ version      = "0.1.0"
 name = "esp32s3"
 path = "./src/bin/main.rs"
 
+[features]
+default = []
+
+ble = [
+  "dep:bt-hci", 
+  "dep:trouble-host",
+  "dep:esp-radio"
+]
+
 [dependencies]
 embassy-executor = "0.9.1"
 embassy-sync = "0.7.2"
@@ -24,11 +33,16 @@ esp-backtrace = { version = "0.18.1", features = [
   "esp32s3",
   "panic-handler",
 ] }
-esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3"] }
+esp-rtos = { version = "0.2.0", features = ["embassy", "defmt", "esp32s3", "esp-radio"] }
 esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32s3"] }
 static_cell = "2.1.1"
 heapless = { version = "0.9.2", features = ["defmt"] }
 mipidsi = "0.9.0"
+
+bt-hci = { version = "0.7.0", optional = true }
+trouble-host = { version = "0.5.1", optional = true, features = ["derive", "defmt"]}
+esp-radio = { version = "0.17.0", optional = true, features = ["ble", "defmt", "unstable", "esp32s3"] }
+embassy-futures = "0.1.2"
 
 frr_shared = { path = "../shared" }
 
